controller适配图表数据 进行中